# Freedom-lang

./: .gitignore  Makefile  README.md  freedon.py  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/: freedon_core.hpp
cpp/src/: freedon_core.cpp  main.cpp
docs/: spec.md
examples/: hello.fd  line_syntax.fd  pipeline.fd  pipeline_min.fd
examples/data/: store.json
native/experimental/pal/mem/: raw_access.cpp
python/freedon_lang/: __init__.py  builtins.py  env.py  errors.py  evaluator.py  frontend.py  hijack.py  ir_compile.py  ir_ops.py  ir_vm.py  parser.py  pipeline.py  repl.py  runner.py  runtime_memory.py  storage.py  tokenizer.py
scripts/: demo_main.py
tests/: conftest.py  test_frontend_line.py  test_pipeline_exec.py  test_tokenizer_parser.py
